--- a/AI_Contact_FE/src/styles/Modal.css
+++ b/AI_Contact_FE/src/styles/Modal.css
@@ -6,7 +6,7 @@
   flex-direction: row;
   gap: 40px;
   justify-content: center;
-  z-index: 2;
+  z-index: 50;
   background: rgba(0, 0, 0, 0.8);
   align-items: center;
 }
